# coderunner

./: .gitignore  Dockerfile  go.mod
.github/workflows/: lint.yaml  test.yaml
coderunner/: main.go
tests/: Makefile  pyproject.toml  test_execute.py  test_load.py
