[tool.poetry]
name = "coderunner-tests"
version = "0.1.0"
description = "Coderunner tests"
authors = ["raisultan <ki.xbozz@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.3"
requests = "^2.32"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
